<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="together.com.homely.CreateFamilyActivity">

    <TextView
        android:text="@string/family_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/family_name"
        android:hint="@string/family_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/create_family_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spouse"
        android:id="@+id/invite_spouse"
        android:textColor="#1e8eb8"
        android:onClick="inviteSpouse"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/father"
        android:id="@+id/invite_father"
        android:textColor="#1e8eb8"
        android:onClick="inviteFather"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mother"
        android:id="@+id/invite_mother"
        android:textColor="#1e8eb8"
        android:onClick="inviteMother"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/son"
        android:id="@+id/invite_son"
        android:textColor="#1e8eb8"
        android:onClick="inviteSon"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daughter"
        android:id="@+id/invite_daughter"
        android:textColor="#1e8eb8"
        android:onClick="inviteDaughter"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brother"
        android:id="@+id/invite_brother"
        android:textColor="#1e8eb8"
        android:onClick="inviteBrother"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sister"
        android:id="@+id/invite_sister"
        android:textColor="#1e8eb8"
        android:onClick="inviteSister"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/action_next"
        android:textColor="#1e8eb8"
        android:onClick="uploadInvites"
        android:layout_centerInParent="true"
        />
</RelativeLayout>
